Fixed the overflow issue that would show the stats too early on click

--- a/cards/css/styles.scss
+++ b/cards/css/styles.scss
@@ -1011,10 +1011,15 @@ li {
 		}
 
 		.overflow-box {
-			overflow-x: auto;
+			overflow-x: hidden;
 			margin-right: 1px;
+
+			&.overflowed {
+				overflow-x: auto;
+			}
 		}
 
+		//left off: scrolling-box is showing when card is flipped, too early
 		.scrolling-box {
 			width: 500px;
 			 -webkit-touch-callout: none; /* iOS Safari */
